--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,15 @@ jobs:
         directories:
           - node_modules
           
+    - stage: build-and-deploy
+      name: 'Build + Deploy2'
+      script:
+        - echo "hi 2"
+      cache:
+        yarn: true
+        directories:
+          - node_modules
+                    
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
   - export PATH="$HOME/.yarn/bin:$PATH"
