--- a/.travis.yml
+++ b/.travis.yml
@@ -15,22 +15,27 @@ jobs:
     - stage: build-and-deploy
       name: 'Build + Deploy'
       script:
+        - ls
         - echo "hi"
+        - mkdir test-artifacts && echo "hello" > test-artifacts/hello.txt
       cache:
         yarn: true
         directories:
           - node_modules
+          - test-artifacts
           
     - stage: build-and-deploy
       name: 'Build + Deploy2'
       script:
+        - ls
         - echo "hi 2"
         - exit 1
       cache:
         yarn: true
         directories:
           - node_modules
-      
+          - test-artifacts
+
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
   - export PATH="$HOME/.yarn/bin:$PATH"
